deleted comments in urls and views, before multi apps

--- a/mobile/templates/mobile/create.html
+++ b/mobile/templates/mobile/create.html
@@ -3,7 +3,7 @@
 {% block title %}Оформление{% endblock %}
 
 {% block content %}
-<h1>Checkout</h1>
+<h1>Форма оформления заказа</h1>
 <div class="order-info">
     <h3>Ваш заказ: </h3>
     <table class="table table-bordered">
